syntax = "proto3";

package user_v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/tokenoff03/user-service/pkg/user_v1; user_v1";

service UserV1 {
    rpc Create (CreateRequest) returns (CreateResponse){
        option (google.api.http) = {
            post: "/user/v1/create"
            body: "*"
        };
    }

    rpc Get (GetRequest) returns (GetResponse){
        option (google.api.http) = {
            get: "/user/v1"
        };
    }

    rpc List (ListRequest) returns (ListResponse){
        option (google.api.http) = {
            get: "/user/v1/list"
        };
    }

    rpc Update (UpdateRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            patch: "/user/v1"
            body: "*"
        };
    }

    rpc Delete (DeleteRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            delete: "/user/v1"
        };
    }
}

message UserInfo {
    string first_name = 1 [(validate.rules).string = {min_len: 1, max_len: 50}];
    string last_name = 2;
    string password = 3;
    string phone_number = 4;
    string email = 5;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UpdateUserInfo {
    google.protobuf.StringValue first_name = 1;
    google.protobuf.StringValue last_name = 2;
    google.protobuf.StringValue password = 3;
    google.protobuf.StringValue phone_number = 4;
    google.protobuf.StringValue email = 5;
}

message CreateRequest {
    UserInfo info = 1;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User user = 1;    
}

message ListRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message ListResponse {
    repeated User users = 1;
}

message UpdateRequest {
    int64 id = 1;
    UpdateUserInfo info = 2;
}

message DeleteRequest {
    int64 id = 1;
}
